--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,8 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_firebase_messaging_sender_id
 VITE_FIREBASE_APP_ID=your_firebase_app_id
 
 # Google Maps Configuration
-VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key 
+VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
+# OpenRouter AI Configuration
+VITE_OPENROUTER_API_KEY=your_openrouter_api_key
+VITE_OPENROUTER_MODEL=deepseek/deepseek-r1-distill-llama-70b:free 
