--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^10.5.0",
     "axios": "^1.8.1",
     "firebase": "^11.4.0",
+    "leaflet": "^1.9.4",
     "pinia": "^2.1.0",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3.3.0",
@@ -23,8 +24,8 @@
     "workbox-window": "^7.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
     "@vite-pwa/assets-generator": "^0.2.3",
+    "@vitejs/plugin-vue": "^4.5.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "vite": "^5.0.0",
